Refactoring of datomisca to use quasi quote and add some new features.