@@ -5,34 +5,58 @@ object BuildSettings {
   val buildName              = "datomisca"
   val buildOrganization      = "pellucidanalytics"
   val buildVersion           = "0.3-SNAPSHOT"
-  val buildScalaVersion      = "2.10.0"
+  val buildScalaVersion      = "2.10.2"
 
   val datomicVersion         = "0.8.3993"
  
-  val buildSettings = Defaults.defaultSettings ++ Seq (
-    organization    := buildOrganization,
-    version         := buildVersion,
-    scalaVersion    := buildScalaVersion
-  )
-}
-
-object ApplicationBuild extends Build {
-
   val typesafeRepo = Seq(
     "Typesafe repository snapshots" at "http://repo.typesafe.com/typesafe/snapshots/",
     "Typesafe repository releases" at "http://repo.typesafe.com/typesafe/releases/"
   )
 
-//  val datomicCredentials = Credentials(Path.userHome / ".sbt" / ".credentials")
-
   val datomicRepo = Seq(
-    //"Bitbucket.org HTTP" at "https://bitbucket.org/mandubian/datomic-mvn/raw/master/releases/"
     "clojars" at "https://clojars.org/repo",
     "couchbase" at "http://files.couchbase.com/maven2"
   )
 
-  lazy val datomic = Project(
-    BuildSettings.buildName, file("."),
+  val buildSettings = Defaults.defaultSettings ++ Seq (
+    organization    := buildOrganization,
+    version         := buildVersion,
+    scalaVersion    := buildScalaVersion,
+    resolvers ++= typesafeRepo ++ datomicRepo ++ List(Resolver.sonatypeRepo("snapshots")),
+    libraryDependencies ++= Seq(
+      "com.datomic" % "datomic-free" % BuildSettings.datomicVersion % "provided" exclude("org.slf4j", "slf4j-nop"),        
+      "org.scala-lang" % "scala-compiler" % "2.10.2",
+      "org.specs2" %% "specs2" % "1.13" % "test",
+      "junit" % "junit" % "4.8" % "test"
+    )
+  )
+}
+
+object ApplicationBuild extends Build {
+
+  import BuildSettings._
+
+  lazy val root: Project = Project(
+    "root",
+    file("core"),
+    settings = buildSettings
+  ) aggregate(macros, core)
+
+  lazy val macros: Project = Project(
+    "macros",
+    file("macros"),
+    settings = buildSettings ++ Seq(
+      // NOTE: macros are compiled with macro paradise 2.10
+      scalaVersion := "2.10.2-SNAPSHOT",
+      scalaOrganization := "org.scala-lang.macro-paradise",
+      libraryDependencies <+= (scalaVersion)("org.scala-lang.macro-paradise" % "scala-reflect" % _)
+    )
+  )
+
+  lazy val core = Project(
+    "core", 
+    file("core"),
     settings = BuildSettings.buildSettings ++ Seq(
       //logLevel := Level.Debug,
       //ivyLoggingLevel := UpdateLogging.Full,
@@ -43,14 +67,6 @@ object ApplicationBuild extends Build {
       ),
       fork in Test := true,
       //parallelExecution in Test := false,
-      //javaOptions in test += "-Xmx512M -Xmx512m -Xmx1024M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=1024M",
-      resolvers ++= typesafeRepo ++ datomicRepo,
-      //credentials += datomicCredentials,
-      libraryDependencies ++= Seq(
-        "com.datomic" % "datomic-free" % BuildSettings.datomicVersion % "provided" exclude("org.slf4j", "slf4j-nop"),        "org.scala-lang" % "scala-compiler" % "2.10.0",
-        "org.specs2" %% "specs2" % "1.13" % "test",
-        "junit" % "junit" % "4.8" % "test"
-      ),
       publishMavenStyle := true,
       publishTo <<= version { (version: String) =>
         val localPublishRepo = "../datomisca-repo/"
@@ -59,5 +75,5 @@ object ApplicationBuild extends Build {
         else Some(Resolver.file("releases", new File(localPublishRepo + "/releases")))
       }
     )
-  )
+  ) dependsOn(macros)
 }
